--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -28,34 +28,47 @@
 .home__title{
     font-size: var(--big-font-size);
     margin-bottom: var(--mb-0-25);
+    white-space: nowrap;
+    display: inline-block;
 
 }
-.home__hand{
-    width: 38px;
-    height: 38px;
+.home__hand {     
+    width: 38px;     
+    height: 38px;     
     margin-left: 0.4rem;
-
+    display: inline-block; /* Makes it inline with the title */
+    vertical-align: middle; /* Aligns it vertically with the text */
 }
 
-.home__subtitle{
-    position: relative;
-    font-size: var(--h3-font-size);
-    padding-left:5.4rem;
-    font-weight: var(--font-normal);
+.home__subtitle{     
+    position: relative;     
+    font-size: var(--h3-font-size);     
+    padding-left: 5.4rem;     
+    font-weight: var(--font-normal);     
     margin-bottom: var(--mb-1);
+    white-space: nowrap;  /* This prevents line breaks */
+}  
 
+.home__subtitle::before{     
+    content: '';     
+    position: absolute;     
+    width: 70px;     
+    height: 1px;     
+    background-color: var(--text-color);     
+    left: 0;      
+    top: 1rem;  
 }
 
-.home__subtitle::before{
-    content: '';
-    position: absolute;
-    width: 70px;
-    height: 1px;
-    background-color: var(--text-color);
-    left: 0;
-    top: 1rem;
-
-}
+/* Optional: If you want to reduce font size for better fit */
+/* .home__subtitle{     
+    position: relative;     
+    font-size: calc(var(--h3-font-size) * 0.9);   
+    padding-left: 5.4rem;     
+    font-weight: var(--font-normal);     
+    margin-bottom: var(--mb-1);
+    white-space: nowrap;
+} 
+*/
 
 .home__description{
     max-width: 400px;
