--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,7 +9,7 @@
 }
 
 .nav{
-    height: calc(var(--header-height)+ 1.5rem);
+    height: 2.25rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
